// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Api set functions setBoostDelay sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "boost": {
      "deactivationtimer": 0,
    },
    "humidity": {
      "activated": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setBoostDelay sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "boost": {
      "deactivationtimer": 1,
    },
    "humidity": {
      "activated": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setBoostDelay sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "boost": {
      "deactivationtimer": 2,
    },
    "humidity": {
      "activated": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setHumiditySensor sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
      "sensoractivation": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setHumiditySensor sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
      "sensoractivation": 1,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setHumiditySensor sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
      "sensoractivation": 2,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setHumiditySensorThreshold sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
      "threshold": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setHumiditySensorThreshold sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
      "threshold": 1,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setHumiditySensorThreshold sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
      "threshold": 2,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setManualSpeed sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "speed": {
      "manualspeed": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setManualSpeed sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "speed": {
      "manualspeed": 1,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setManualSpeed sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "speed": {
      "manualspeed": 2,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setOnOffStatus sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "onoff": 0,
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setOnOffStatus sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "onoff": 1,
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setOnOffStatus sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "onoff": 2,
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setOperationMode sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "operationmode": 0,
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setOperationMode sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "operationmode": 1,
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setOperationMode sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "operationmode": 2,
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setSpeedMode sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "speed": {
      "mode": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setSpeedMode sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "speed": {
      "mode": 1,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setSpeedMode sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "speed": {
      "mode": 2,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setTimerMode sends value 0 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "timers": {
      "mode": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setTimerMode sends value 1 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "timers": {
      "mode": 1,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions setTimerMode sends value 2 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "timers": {
      "mode": 2,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions update gets response 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;

exports[`Api set functions update sends correct data 1`] = `
{
  "calls": [],
  "response": {
    "humidity": {
      "activated": 0,
    },
    "unittype": "Vento Expert",
  },
}
`;
